*Empty MediaWiki Message*

--- a/Middelsassisk.mw
+++ b/Middelsassisk.mw
@@ -216,13 +216,13 @@ Dree subgruppen künnen underskeidden wörden:
 
 (1) ''Oustfrees en oldenbörgsk'', dit binnen de gebeden in et noorden, ten westen van de [[Weser|Beneaderweaser]], inklusiv de dialekten mid een [[Freeske taaln|freeske]] substraat. So as verwachted kan wörden, is der een groute invlööd üüt et westfålsk, neaderlandsk en et freesk (''hem'' nåst ''em'' 'hüm'; meyrvolden up ''-s''; ''vrent'' nåst ''vrünt'' 'kammeråd').
 
-(2) ''Noordalbingisk', tüsken de [[Weser|beneaden-Weaser]] en de [[Elve|beneaden-Elve]], en ouk Holsteyn an de rechter banke van de [[Elve|beneaden-Elve]], höyvdplaatsen: [[Hambörg]], [[Bremen]], [[Lünborg|Lünbörg]], [[Kiel (Duutslaand)|Kyl]].
+(2) ''Noordalbingisk'', tüsken de [[Weser|beneaden-Weaser]] en de [[Elve|beneaden-Elve]], en ouk Holsteyn an de rechter banke van de [[Elve|beneaden-Elve]], höyvdplaatsen: [[Hambörg]], [[Bremen]], [[Lünborg|Lünbörg]], [[Kiel (Duutslaand)|Kyl]].
 
 (3) ''Oustelvisk'', inklusiv [[Lübeak]] en de gebeden vearder nå et ousten, so as [[Meakelenbörg]], [[Pommeren]], et noorden van [[Brandenbörg]] (Prignitz, Uckermark, Oldmark), [[Prüüssen]], [[Lyvland]]. Likt når up et ''noordalbingisk''. Vandage de dag binnen de oustelike dialekten düdelik te underskeiden van de westelike dialekten vanweagen de [[eenheidsmearvoold|eynheidsmeyrvold]]form up ''-en'' (teagenoaver et westelike ''-(e)t''), in de middelsasisske periode konkurreerde, in et westen en et ousten, beide formen noch teagen mekare. Höyvdplaatsen: Lübeak, [[Wismer]], [[Rostock]], [[Strålsund]]. De hougdüütske invlööd was stark in de [[Düütske Ordeståt]], de readen dårvöär was dat de ridderlike elite üüt verskillende regios kwam, dårdöär is de middelsassiske literatuur al vrog verwårlousd.
 
 '''Oustfålsk''': ruwweg et gebeed ten ousten van de [[Weser|midden-Weaser]], ten noorden en deyls ten westen van et [[Harz]]gebargde, tot an de [[Elve|midden-Elve]], mär sunder de streak [[Oldmark]]. In et noorden formt de dünbevolkede [[Lünborg|lünbörger heyde]] een soort natuurlike grens. Höyvdplaatsen: [[Hannover]], [[Hilmessen]], [[Broenswiek|Brünswyk]], [[Gosler]], [[Göttingen]], [[Meidebörg]], [[Halle (Saale)|Halle]] (an de Saale) (in vroggere tyden). Et gebeed binnen de afwatering van de Elve is estichted döär kolonisaty en is up vöäle maneren bysünder te nömen. Et südelike deyl van dit ''Elve-oustfålske'' gebeed güng al in de late middeleywen oaver up et hougdüütsk.<ref>Bischoff, Karl (1967). Sprache und Geschichte an der mittleren Elbe und unteren Saale (düütsk). Köln. bls. 236 f. "Wenn Aken, Dessau, Köthen, Wittenberg, Walkenried, Eisleben, Merseburg, Halle mit ihren Umgebungen heute mitteldeutsche Mundarten haben, so ist das erst das Ergebnis einer großen sprachlichen Umlagerung, sie haben mit ihrer niederdeutschen Vergangenheit gebrochen. Aber ganz können sie sie nicht verleugnen, einige Reste sind auch im Bereich der Lautverschiebung unangetastet geblieben." [Oaversetting: "Dat [[Aken (Elve)|Aken]], [[Dessau]], [[Köthen]], [[Wittenbarg]], [[Walkenryd]], [[Ysleaven]], [[Mersebörg]], [[Halle an der Saale|Halle]] en nåbürige plaatsen vandage de dag [[middeldüütsk]]e dialekten hebben, is et resultaat van een groute språkkündige versküving; se hebben mid höär sassiske verleaden ebröäken, mär se künnen et der neet vulleadig an untkummen; een antal oaverblyvsels mid betrekkinge tot de [[twiede Germaanse klaankverskoeving|tweyde germaanske klankversküving]] hebben sik byvöärbeald ehandhaavd.]</ref>
 
-''Enkele kenmarken'': [[ümlüüd]] is produktiver, kümt vöär ''-ich'' en ''-isch'' vöär (bv. ''sessisch'' sassisk) en et versküven van ''e'' nå ''i'' (bv. ''stidde'' vöär ''stēde'' steade). De vertweyklankede korte /o/ wördt selden düsdånig emarkeerd, in teagenstelling tot andere dialekten. Vöär /r/, wörden ''e'' en ''a'' vake ümmedraid. Unbeklemtoonde ''o'' (so as in et achtervoogsel ''-schop'' -skap) verandert vake in ''u'' (''-schup''). Et modale warkwoord vöär 'sal/solde' (''schal'') klinkt as /ʃ/, neet as /s/. Et vöärvoogsel van et vultooid deylwoord wördde oaver et algemeyn üütespröäken ''e-'', mär wördde volgens de vöäreskreaven norm vöärnamelik as ''ge-'' eskreaven. De plaatselike form ''ek'' ('ik' (persoonlik vöärnaamwoord 1. pers. enkv.)) konkurreerde mid de "standard''-form ''ik''; up een soortgelyke manere konkurreerde de oblike form ''mik'' ('my(n)') mid de "standard"-form ''mī''. Gewoanlik is der ouk een dative form van et persoonlik vöärnaamwoord (1. pers. enkv. ''mē''). Een woordeskat dat stark likt up et noordalbingisk. Ungebrükelike meyrvoldsform ''menne'' ('mannen').
+''Enkele kenmarken'': [[ümlüüd]] is produktiver, kümt vöär ''-ich'' en ''-isch'' vöär (bv. ''sessisch'' sassisk) en et versküven van ''e'' nå ''i'' (bv. ''stidde'' vöär ''stēde'' steade). De vertweyklankede korte /o/ wördt selden düsdånig emarkeerd, in teagenstelling tot andere dialekten. Vöär /r/, wörden ''e'' en ''a'' vake ümmedraid. Unbeklemtoonde ''o'' (so as in et achtervoogsel ''-schop'' -skap) verandert vake in ''u'' (''-schup''). Et modale warkwoord vöär 'sal/solde' (''schal'') klinkt as /ʃ/, neet as /s/. Et vöärvoogsel van et vultooid deylwoord wördde oaver et algemeyn üütespröäken ''e-'', mär wördde volgens de vöäreskreaven norm vöärnamelik as ''ge-'' eskreaven. De plaatselike form ''ek'' ('ik' (persoonlik vöärnaamwoord 1. pers. enkv.)) konkurreerde mid de "standard"-form ''ik''; up een soortgelyke manere konkurreerde de oblike form ''mik'' ('my(n)') mid de "standard"-form ''mī''. Gewoanlik is der ouk een dative form van et persoonlik vöärnaamwoord (1. pers. enkv. ''mē''). Een woordeskat dat stark likt up et noordalbingisk. Ungebrükelike meyrvoldsform ''menne'' ('mannen').
 
 '''(Süüd)brandenbörgsk''' en ''Oustanholtsk'': ruwweg tüsken de midden-Elve en de midden-Oder, en langes de midden-Havel, grensend an old [[sorben|sorbisk]] gebeed in et süüdousten. Höyvdplaatsen: [[Berlien|Berlyn]], [[Frankfort (Oder)|Frankfort]] (an de Oder), [[Zerbst]]. Een koloniaal dialekt dat stark beinvlöded is döär settelaars dee [[Nederfrankisch|neaderfrankisk]] pråtden. Ouk al vrog stark beinvlöded döär et hougdüütsk.
 
