--- a/Lewis_Hamilton.mw
+++ b/Lewis_Hamilton.mw
@@ -719,7 +719,7 @@ Hamilton gebrukeden nen goldekleureden helm by den Grouten Prys van Abu Dhabi va
 |style="background:#FFDF9F;"| [[Hockenheimring|HOC<br />2]]<br />{{small|3}}
 |style="background:#FFFFBF;"| '''''[[Pau Grand Prix|PAU<br />1]]'''''<br />{{small|1}}
 |style="background:#FFFFBF;"| '''''[[Pau Grand Prix|PAU<br />2]]'''''<br />{{small|1}}
-| style="background:#000; color:white;"| '''[[Circuit de Spa-Francorchamps|<span style="color:white">SPA<br />1]]'''<br />{{small|diskwalificered}}
+| style="background:#000; color:white;"| '''[[Circuit de Spa-Francorchamps|<span style="color:white">SPA<br />1</span>]]'''<br />{{small|diskwalificered}}
 |style="background:#FFFFBF;"| ''[[Circuit de Spa-Francorchamps|SPA<br />2]]''<br />{{small|1}}
 |style="background:#FFFFBF;"| '''[[Circuit de Monaco|MON<br />1]]'''<br />{{small|1}}
 |style="background:#FFFFBF;"| '''''[[Circuit de Monaco|MON<br />2]]''''' <br />{{small|1}}
