--- a/Karel_de_Grote.mw
+++ b/Karel_de_Grote.mw
@@ -1,7 +1,7 @@
 [[Bestaand:Notredameparisstatue.png|thumb|Staandbeeld van Karel de Grote in Paries]]
-'''Karel de Grote''' (waarschijnlijk 747 of 748 - 814) was vanof 768 koning van de [[Franken]], en van 800 töt zien dood Rooms keizer. Hi'j was de zeune van [[Pepijn de Korte]] en Bertrada van Laon. Nao zien dood is é in-emetseld in 'n crypte onder 'n [[Dom van Aken]]. Veur zowel de Fraansen as de Duutsers vörmt Karel de Grote vake 't beginne van de geschiedschriewing van heer nationaalstaot.
+'''Karel de Grote''' (waorschienlik 747 of 748 - 814) was vanof 768 koning van de [[Franken]], en van 800 töt zien dood Rooms keizer. Hi'j was de zeune van [[Pepijn de Korte]] en Bertrada van Laon. Nao zien dood is é in-emetseld in 'n crypte onder 'n [[Dom van Aken]]. Veur zowel de Fraansen as de Duutsers vörmt Karel de Grote vake 't beginne van de geschiedschriewing van heur nationaalstaot.
 
-Volgens onderzoekers van de Universiteit van Bonn is 't mogelijk dat 't leven van Karel de Grote zo als wij dat vandaag kennen, een vervalsing was .Er is namelijk maar een bron die Karel noemt die ok uut de tied van zien leven stamt: de [[Vita Karoli Magni]] van [[Einhard]]. Alle aandere bronnen binnen schreven ver nao zien dood. Der binnen ok dokumenten die zulf zeggen dat ze uut de tied van Karel stammen, maar die volgens de Universiteit Bonn in een laetere tied schreven binnen. Dit is onder andere te zien aan schrijfwijzen en stielfouties.
+Volgns onderzuukers van de Universiteit van Bonn is 't meuglik dat 't leven van Karel de Grote zo as wi'j dat vandaege kennen, een vervalsing was. Der is naomelik maor ien bron die Karel nuumt die ok uut de tied van zien leven stamt: de [[Vita Karoli Magni]] van [[Einhard]]. Alle aandere bronnen binnen schreven ver nao zien dood. Der binnen ok dokumenten die zulf zeggen dat ze uut de tied van Karel stammen, maor die volgens de Universiteit Bonn in een laetere tied schreven binnen. Dit is onder aandere te zien an schriefwiezen en stielfouties.
 
 == Verwiezings ==
 {{CommonsStellingwarfs|Karl I. der Grosse}}
