--- a/Nedersaksische_skeeldwöarde.mw
+++ b/Nedersaksische_skeeldwöarde.mw
@@ -504,7 +504,7 @@ Um n good beeld te geewn van de völziedigheaid, is dezelfde indelige an eheuldn
 **''potjekakker'' 
 **''potjeschieter''
 **''töntjeschieter''
-***Woorden kommen van vrouger, dou heil Oostfreisland aarm was, oube Emden neit deur de koopluu dij doar woonde. Allein dij koopluu scheten in tönnen in stee van n gemak of n hoeske.''
+***Woorden kommen van vrouger, dou heil Oostfreisland aarm was, oube Emden neit deur de koopluu dij doar woonde. Allein dij koopluu scheten in tönnen in stee van n gemak of n hoeske.
 
 ==Ummegaank met aandere leu==
 
@@ -578,7 +578,7 @@ Um n good beeld te geewn van de völziedigheaid, is dezelfde indelige an eheuldn
 *[[Stellingwarfs]]:
 *[[Tweants]]:
 **''krange(n) kearl/vrouwe''
-**''eagngedreaidn
+**''eagngedreaidn''
 **''droadneagel''
 **''[[Eanter#Oard_en_Sproake|Eantersen]]''
 **Oetsproake: "Iej konn wal oet Eanter komn!"
@@ -802,7 +802,7 @@ Um n good beeld te geewn van de völziedigheaid, is dezelfde indelige an eheuldn
 *[[Veluws]]:
 **''praotjesmaker'', ''präötiesmäker''
 **''kwebbelkonte''
-**''kletskonte
+**''kletskonte''
 
 ===Raar mens===
 *[[Nederlaands]]: ''raar mens''
@@ -943,7 +943,7 @@ Um n good beeld te geewn van de völziedigheaid, is dezelfde indelige an eheuldn
 **''(pearde)gaffel''
 **''gevret''
 *[[Veluws]]:
-**''peerdebek 
+**''peerdebek''
 **''peerdemuul'' 
 **''peerdekop''
 
