*Empty MediaWiki Message*

--- a/Nedersaksische_zinnen.mw
+++ b/Nedersaksische_zinnen.mw
@@ -1,4 +1,4 @@
-Dit paart van t [[Nedersaksisch woordenboek|Leegsaksisch woordenbouk]] bevat zinnen ien de verschaaidene dialekten. Ien eerste gedailte gaait t om n aantel zinnen dij per variant hail verschillend binnen. Ien t twijde gedailte gaait t om n aantel standerdzinnen. Doar wordt de spèllen apaart aangeven. Ien t eerste gedailte wordt schreven zo as t oetsproken wordt. De Duutse g wordt dus as kh schreven, de zaachte g wordt as ch schreven, de ee as ien ''peer'' wordt schreven as ì, de Grunnegs-Oostfraise oa-klank as oa en de Westfeelse ao as ò. 
+Dit paart van t [[Nedersaksisch woordenboek|Leegsaksisch woordenbouk]] bevat zinnen ien de verschaaidene dialekten. Ien eerste gedailte gaait t om n aantel zinnen dij per variant hail verschillend binnen. Ien t twijde gedailte gaait t om n aantel standerdzinnen. Doar wordt de spèllen apaart aangeven. Ien t eerste gedailte wordt schreven zo as t oetsproken wordt. De Duutse g wordt dus as kh schreven, de zaachte g wordt as ch schreven, de ee as ien ''peer'' wordt schreven as ì, de Grunnegs-Oostfraise oa-klank as oa en de Westfeelse ao as ò.
 
 ==Zinnen==
 ===In de winter vliegen de droge bladeren in de lucht rond===
@@ -7,7 +7,7 @@ Dit paart van t [[Nedersaksisch woordenboek|Leegsaksisch woordenbouk]] bevat zin
 
 *[[Achterhooks]]:
 *[[Drèents]]:
-*[[Grönnegs]]: 
+*[[Grönnegs]]:
 **[[Hoogelaandsters]]: ''ien wìntr flijkhng de dreuwge bloadr ien locht roant<small>hs</small>''
 **[[Oldambtsters]]: ''ìnne wìntr flaikhng de dreuwge bloadr inne locht roant<small>hs</small>''
 **[[Westerkertiers]]: ''iene wìntr fliekhng de dreuwge bloadr iene locht roant<small>hs</small>''
@@ -15,7 +15,7 @@ Dit paart van t [[Nedersaksisch woordenboek|Leegsaksisch woordenbouk]] bevat zin
 *[[Heidjers]]: ''tsoen winteh fleejgt de droikhng bleuda deua de loeft roem''
 *[[Münsterlänsk]]: ''im winteh flaigt die druukhng blè inne loeft rum''
 *[[Ollenborgs]]: ''im winteh flijgt die dreuge bleu im loft rom''
-*[[Oostfreisk]]: 
+*[[Oostfreisk]]:
 **[[Brooukmerlands]]: ''inne winta flaikhng de dreuge blouden inne loft hìroem''
 **[[Reiderlaands]]: ''inne winter flaikhng de dreuwge blouder inne locht rom''
 *[[Siuerlänsk]]: ''im winta flaigut de druukhng bledre deur de loeft rumme''
@@ -26,7 +26,7 @@ Dit paart van t [[Nedersaksisch woordenboek|Leegsaksisch woordenbouk]] bevat zin
 *[[Tweants]]:
 **[[Eanskes]]: ''in n wjeenta fleekht de drjeukhe bljöadrn in n ljukt rôôn''
 *[[Urkers]]:
-*[[Veluws]]: 
+*[[Veluws]]:
 **[[Nunspeets]]: ''swientes/in de wienteh vlìgn de dreuge blòjn in de loch rond''
 **[[Putters]]: ''swientes/in de wienteh vliegen de dreuge blòjen in de lucht ro{{small()|e}}nd''
 *[[Westmünsterlänsk]]: ''im winta flìagt die deukhng blìa inne luft rum''
@@ -37,14 +37,14 @@ Dit paart van t [[Nedersaksisch woordenboek|Leegsaksisch woordenbouk]] bevat zin
 
 *[[Achterhooks]]:
 *[[Drèents]]:
-*[[Grönnegs]]: 
+*[[Grönnegs]]:
 **[[Hoogelaandsters]]: ''ik wìot oouwk nait wìr don''
 **[[Oldambtsters]]: ''ik wìot oouwk nait wìr douwn''
 **[[Westerkertiers]]: ''ik wìot oouwk niewìr doewn''
 **[[Westerwoolds]]: ''ik woat oouwk nich wìr doown''
 *[[Heidjers]]: ''ik wildat ook nie mìa welleh doown''
 *[[Ollenborgs]]: ''jit wildat oouk nich mìa wedda doown''
-*[[Oostfreisk]]: 
+*[[Oostfreisk]]:
 **[[Brooukmerlands]]: ''ik wìot oouwk neejt wìr doouwn''
 **[[Reiderlaands]]: ''ik wìot oouwk naiwìt douwn''
 *[[Siuerlänsk]]: ''ik wildat ouk nie mai widda doun''
@@ -55,7 +55,7 @@ Dit paart van t [[Nedersaksisch woordenboek|Leegsaksisch woordenbouk]] bevat zin
 *[[Tweants]]:
 **[[Eanskes]]: ''ik wjit ok njig mjear wèr dôôn''
 *[[Urkers]]:
-*[[Veluws]]: 
+*[[Veluws]]:
 **[[Nunspeets]]: ''kwilt oek nìt mìh doon''
 **[[Putters]]: ''kwilt o{{small()|e}}k nie{{small()|t}} mìh doen''
 *[[Westmünsterlänsk]]: ''ik wil dat uak nich wìa duan''
@@ -66,7 +66,7 @@ Dit paart van t [[Nedersaksisch woordenboek|Leegsaksisch woordenbouk]] bevat zin
 
 *[[Achterhooks]]:
 *[[Drèents]]:
-*[[Grönnegs]]: 
+*[[Grönnegs]]:
 **[[Hoogelaandsters]]: ''ajjis vijer of sès weejk leejdn oetied goan''
 **[[Oldambtsters]]: ''ajjis vaaier of sès weejk hìr oedetied goan''
 **[[Westerkertiers]]: ''ajjis vier of sès weejk leejdn udetied goan''
@@ -95,7 +95,7 @@ Dit paart van t [[Nedersaksisch woordenboek|Leegsaksisch woordenbouk]] bevat zin
 *[[Drèents]]: mien moe giet morg'n vrog noar Hamburg om bloed op te haal'n
 *[[Grönnegs]]: ''miemmoudr gaait<small>sh</small> mödn noarambög thouw om blouwt<small>hs</small> op thoaln''
 *[[Ollenborgs]]: ''mien moowda geejt meurn nao hambòak oem bloowt af toow holln''
-*[[Oostfreisk]]: 
+*[[Oostfreisk]]:
 **[[Moormerlands]]: ''mien muida khijt mödn noaë hamböak thuiw oem bluiwt òf to holln''
 **[[Reiderlaands]]: ''mien mjoudar gait mödn noaë hamböag thouw om bljouwt òf thouw hoalln''
 *[[Sallaans]]:
@@ -114,9 +114,9 @@ Dit paart van t [[Nedersaksisch woordenboek|Leegsaksisch woordenbouk]] bevat zin
 
 *[[Achterhooks]]:
 *[[Drèents]]:
-*[[Grönnegs]]: ''mòrras dreug wot<small>sh</small>, droagik mien gruin-svæde boouwt<small>sh</small> noaboe'n thouw, veuddat reekhng gaait<small>sh</small>
-*[[Ollenborgs]]: 
-*[[Oostfreisk]]: 
+*[[Grönnegs]]: ''mòrras dreug wot<small>sh</small>, droagik mien gruin-svæde boouwt<small>sh</small> noaboe'n thouw, veuddat reekhng gaait<small>sh</small>''
+*[[Ollenborgs]]:
+*[[Oostfreisk]]:
 **[[Moormerlands]]: ''ouva wennet drokken wot<small>sh</small>, drògik mien khreun-swæthe boouwt<small>sh</small> n sjtukje nòa boe'n thoow, veuadattet ænvangt thoow reekhng''
 **[[Reiderlaands]]: ''ouve wennet dreuwch wot<small>sh</small>, droougik mien khruin-swæthe boouwt<small>sh</small> n stukje noaë boe'n thouw, veuadattet ænvangt thouw reekhng''
 *[[Sallaans]]:
@@ -140,7 +140,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 ! align=left | Zin
 ! align=left | Oetsproak
 |-
-|Wat is dit || ''Wat is dit?'' ||was dìt<small>s</small> 
+|Wat is dit || ''Wat is dit?'' ||was dìt<small>s</small>
 |-
 |Waar is hier de wc? || ''Woar is hier t gemak/hoeske?'' ||woars hie tgmak/ toeske
 |-
@@ -148,11 +148,11 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |-
 |Waar kom je vandaan? ||''Woar komst doe vot?''||woa komstoe vòt<small>s</small>
 |-
-|Spreek jij Engels? ||''Kinst doe Engels?''||kistoe Ingels  
+|Spreek jij Engels? ||''Kinst doe Engels?''||kistoe Ingels
 |-
-|Ik begrijp het niet || ''Ik begriep t nait''||kbgriep'naajt<small>s</small> 
+|Ik begrijp het niet || ''Ik begriep t nait''||kbgriep'naajt<small>s</small>
 |-
-|Ik weet het niet||''Ik wait t nait'' ||kwaj' naajt<small>s</small> 
+|Ik weet het niet||''Ik wait t nait'' ||kwaj' naajt<small>s</small>
 |-
 |Het spijt me||''t Spiet mie dunders''||' spie' mie döndes
 |}
@@ -164,7 +164,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 ! align=left | Zin
 ! align=left | Oetsproak
 |-
-|Wat is dit || ''Wat is dit?'' ||was dìt<small>s</small> 
+|Wat is dit || ''Wat is dit?'' ||was dìt<small>s</small>
 |-
 |Waar is hier de wc? || ''Woar is hier t gemak/huuske?'' ||woars hie tgmak/tuuske
 |-
@@ -172,20 +172,20 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |-
 |Waar kom je vandaan? ||''Woar komst doe vot?''||woa komstoe f<small>w</small>òt<small>s</small>
 |-
-|Spreek jij Engels? ||''Kinst doe Engels?''||kistoe Ingels  
+|Spreek jij Engels? ||''Kinst doe Engels?''||kistoe Ingels
 |-
-|Ik begrijp het niet || ''Ik begriep t nait''||kbgriep' niet<small>s</small> 
+|Ik begrijp het niet || ''Ik begriep t nait''||kbgriep' niet<small>s</small>
 |-
-|Ik weet het niet||''Ik wiet t niet'' ||kwie'niet<small>s</small> 
+|Ik weet het niet||''Ik wiet t niet'' ||kwie'niet<small>s</small>
 |-
 |Het spijt me||''t Spiet mie dunders''||' spie' mie döndes
 |}
 
-:''De "oa" wordt oetsproken as de "oo" ien t Nederlaandse "oor". 
-:''De "ì" wordt oetsproken as de "ee" ien t Nederlaandse "peer". 
-:''De "ò" wordt oetsproken as de "o" ien t Nederlaandse "lot".  
-:''De ' wordt oetsproken as n steut, vergeliekboar mit n hail kört oetsproken "u"
-:''As mit de zin "Waar kom je vandaan" maind wordt woar aine laangerleden vot komt wordt der zègd "Woarheer komst doe?"
+:''De "oa" wordt oetsproken as de "oo" ien t Nederlaandse "oor".
+:''De "ì" wordt oetsproken as de "ee" ien t Nederlaandse "peer".
+:''De "ò" wordt oetsproken as de "o" ien t Nederlaandse "lot".
+:''De ' wordt oetsproken as n steut, vergeliekboar mit n hail kört oetsproken "u"''
+:''As mit de zin "Waar kom je vandaan" maind wordt woar aine laangerleden vot komt wordt der zègd "Woarheer komst doe?"''
 
 === [[Drèents]] ===
 ==== [[Midden-Drèents]] ====
@@ -203,7 +203,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |-
 |Waar kom je vandaan? ||''Waor kumpt ie vort?''||wao kumtie vòrt
 |-
-|Spreek jij Engels? ||''Ku-j' Engels?''||kuj Engels  
+|Spreek jij Engels? ||''Ku-j' Engels?''||kuj Engels
 |-
 |Ik begrijp het niet || ''Ik begriep 't niet''||ekbegrieput niet
 |-
@@ -212,8 +212,8 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |Het spijt me||''Het spiet mie''||ut spiet mij
 |}
 
-:''De "ao" wordt oetsproken as "ore" in 't Engelse "more" in de Received Pronunciation (de "r" heur ie daorin niet; de klinker/diftong is wat uuterekt).
-:''De "ì" wordt oetsproken as de "ee" ien t Nederlaandse "peer".
+:''De "ao" wordt oetsproken as "ore" in 't Engelse "more" in de Received Pronunciation (de "r" heur ie daorin niet; de klinker/diftong is wat uuterekt).''
+:''De "ì" wordt oetsproken as de "ee" ien t Nederlaandse "peer".''
 
 ==== [[Zuudwest-Zuud-Drèents]] ====
 {| {{prettytable}} cellpadding=3 cellspacing=0
@@ -224,13 +224,13 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |-
 |Wat is dit || ''Wat is dit?'' ||waddes dit
 |-
-|Waar is hier de wc? || ''Waor is hier 't husien? || waor is (h)ier ut huusien
+|Waar is hier de wc? || ''Waor is hier 't husien?'' || waor is (h)ier ut huusien
 |-
 |Hoe heet jij? ||''Hoe heet ie?''||hoe hìtie
 |-
 |Waar kom je vandaan? ||''Waor kom ie weg / vandaon?''||waor kommíe weg / vandòòn
 |-
-|Spreek jij Engels? ||''Ku-j' Engels?''||kuj Engels  
+|Spreek jij Engels? ||''Ku-j' Engels?''||kuj Engels
 |-
 |Ik begrijp het niet || ''Ik begriep 't niet''||ik begrieput niet
 |-
@@ -239,8 +239,8 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |Het spijt me||''('t) Spiet mie (donders)''||(ut) spiet mie
 |}
 
-:''De "ao" wordt oetsproken as "ore" in 't Engelse "more" in de Received Pronunciation (de "r" heur ie daorin niet; de klinker/diftong is wat uuterekt).
-:''De "ì" spreek ie uut as de "ee" ien t Nederlaandse "peer".
+:''De "ao" wordt oetsproken as "ore" in 't Engelse "more" in de Received Pronunciation (de "r" heur ie daorin niet; de klinker/diftong is wat uuterekt).''
+:''De "ì" spreek ie uut as de "ee" ien t Nederlaandse "peer".''
 
 === [[Stellingwarfs]] ===
 {| {{prettytable}} cellpadding=3 cellspacing=0
@@ -257,7 +257,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |-
 |Waar kom je vandaan? ||''Waor koj' weg/vot?{{Info|Een aandere optie is: Waor kom ie weg/vot}}''||wao koj weg/vot
 |-
-|Spreek jij Engels? ||''Kuj' Ingels/Engels?''||kuj Ingels/Engels  
+|Spreek jij Engels? ||''Kuj' Ingels/Engels?''||kuj Ingels/Engels
 |-
 |Ik begrijp het niet || ''Ik begriepe et niet''||kbegriep-ut niet
 |-
@@ -266,32 +266,8 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |Het spijt me||''Et spiet mi'j''||ut spiet mì-j
 |}
 
-=== [[Urkers]] ===
-{| {{prettytable}} cellpadding=3 cellspacing=0
-|- bgcolor=#eeeeee
-! align=left | Nederlaans
-! align=left | Zin
-! align=left | Uutspraoke
-|-
-|Wat is dit || '' '' || 
-|-
-|Waar is hier de wc? || '' '' || 
-|-
-|Hoe heet jij? ||'' ''|| 
-|-
-|Waar kom je vandaan? ||'' ''|| 
-|-
-|Spreek jij Engels? ||'' ''|| 
-|-
-|Ik begrijp het niet || '' ''|| 
-|-
-|Ik weet het niet||'' '' || 
-|-
-|Het spijt me|| '' '' || 
-|}
-
 === [[Sallaans]] ===
-; [[Gällemuun|Gällemunigers]] 
+; [[Gällemuun|Gällemunigers]]
 {| {{prettytable}} cellpadding=3 cellspacing=0
 |- bgcolor=#eeeeee
 ! align=left | Nederlaans
@@ -306,7 +282,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |-
 |Waar kom je vandaan? ||''Waor kom ie vandaon?''||wao kommie vundaon
 |-
-|Spreek jij Engels? ||''Ku-j Engels?''||kuj Engels  
+|Spreek jij Engels? ||''Ku-j Engels?''||kuj Engels
 |-
 |Ik begrijp het niet || ''Ik begriepe-n-'t niet''||kbegriepe-nut niet
 |-
@@ -315,7 +291,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |Het spijt me||'''t Spiet mi'j''||ut spiet mì-j
 |}
 
-; [[Hardenbarg (stad)|'n Arnbargers]] 
+; [[Hardenbarg (stad)|'n Arnbargers]]
 {| {{prettytable}} cellpadding=3 cellspacing=0
 |- bgcolor=#eeeeee
 ! align=left | Nederlaans
@@ -330,7 +306,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |-
 |Waar kom je vandaan? ||''woar kom ie vöt?''||Woar kommie vöt
 |-
-|Spreek jij Engels? ||''Ku'j Engels?''||kuj Engels  
+|Spreek jij Engels? ||''Ku'j Engels?''||kuj Engels
 |-
 |Ik begrijp het niet || ''Ik begriepe 't niet''||begriepe't nie
 |-
@@ -357,7 +333,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |-
 |Waar kom je vandaan? ||''Woer kom ie vandan/vort/weg?''||woe kommie vandan/vot/weg
 |-
-|Spreek jij Engels? ||''Kö-j Engels?''||köj Engels  
+|Spreek jij Engels? ||''Kö-j Engels?''||köj Engels
 |-
 |Ik begrijp het niet || ''Ik begriepe 't nit''||kbegriepe-t nih
 |-
@@ -373,15 +349,15 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 ! align=left | Zin
 ! align=left | Uutspraoke
 |-
-|Wat is dit || ''Wat is dit?'' ||wat is dit? 
+|Wat is dit || ''Wat is dit?'' ||wat is dit?
 |-
 |Waar is hier de wc? || ''Waor is hier den plee?'' ||waor is hier d'n plee?
 |-
 |Hoe heet jij? ||''Hoo het i-j?''||hoo hét iej?
 |-
-|Waar kom je vandaan? ||''Waor kom i-j vandaon?''||wao kom iej vandón? 
+|Waar kom je vandaan? ||''Waor kom i-j vandaon?''||wao kom iej vandón?
 |-
-|Spreek jij Engels? ||''Ku-j Engels?''||kúj Engels?   
+|Spreek jij Engels? ||''Ku-j Engels?''||kúj Engels?
 |-
 |Ik begrijp het niet || ''Ik begriep et neet''||ik begriep ut neet
 |-
@@ -391,7 +367,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |}
 
 === [[Oost-Veluws]] ===
-; [[Une]]r dialect 
+; [[Une]]r dialect
 {| {{prettytable}} cellpadding=3 cellspacing=0
 |- bgcolor=#eeeeee
 ! align=left | Nederlaans
@@ -406,7 +382,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |-
 |Waar kom je vandaan? ||''Waor kom ie vandaon?''||wao kommie vundaon
 |-
-|Spreek jij Engels? ||''Ku-j Engels?''||kuj Engels  
+|Spreek jij Engels? ||''Ku-j Engels?''||kuj Engels
 |-
 |Ik begrijp het niet || ''Ik begriepe-n-'t niet''||kbegriepe-nut niet
 |-
@@ -431,7 +407,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |-
 |Waar kom je vandaan? ||''Waor kom je vandaon?''||wao kom je vundaon
 |-
-|Spreek jij Engels? ||''Ku'j Engels?''||kuj Engels  
+|Spreek jij Engels? ||''Ku'j Engels?''||kuj Engels
 |-
 |Ik begrijp het niet || ''Ik begriep t niet''||kbegriep ut niet
 |-
@@ -455,7 +431,7 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |-
 |Waar kom je vandaan? ||''Waor kom je vandaon?''||wao kom je vundaon
 |-
-|Spreek jij Engels? ||''Ku'j Engels?''||kuj Engels  
+|Spreek jij Engels? ||''Ku'j Engels?''||kuj Engels
 |-
 |Ik begrijp het niet || ''Ik begriep t niet''||kbegriep ut niet/nit
 |-
@@ -464,8 +440,8 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |Het spijt me||''t Spiet m'n''||ut spiet mun
 |}
 
-:''De "ao" wodt uutspreuken as de "oo" in et Nederlaanse "oor". 
-:''De "ì" wodt uutspreuken as de "ee" in et Nederlaanse "peer". 
+:''De "ao" wodt uutspreuken as de "oo" in et Nederlaanse "oor".
+:''De "ì" wodt uutspreuken as de "ee" in et Nederlaanse "peer".
 
 {{Nedersaksische spraokgidsen}}
 
