*Empty MediaWiki Message*

--- a/Nedersaksiese_gerechten.mw
+++ b/Nedersaksiese_gerechten.mw
@@ -187,7 +187,7 @@ Ofhaankelik van n tied van t joar wordt verskilnde gerechn op toafel ezat. n ''Z
 *''Goamoal'' (steewigen soep vuur a-j zwoar woark munn doon)
 *''[[Kruudmoos]]''
 *''(stamppot) [[Moos]]''
-*''(stamppot) [[Wortel]]n met [[siepel]]n (mangs ook of ekort tot Stawosi)
+*''(stamppot) [[Wortel]]n met [[siepel]]n'' (mangs ook of ekort tot ''stawosi'')
 
 ===Tweants dreenkn===
 Van ooldhèr wör dr in Tweante völ stoarkn draank emaakt of distilleerd. Dr beent onmeundig nen hoop verskilnde soortn kruudnbitters, met vake klurige naamns: ''Twents Kuiernat'', ''Eanters Boorköttelnat'', enz.
