*Empty MediaWiki Message*

--- a/Internetmeme.mw
+++ b/Internetmeme.mw
@@ -1,9 +1,9 @@
 Ne '''internetmeme''' (spreak uut as 'internetmym') is en koncept of en idee wat sik oaver [[internet]] rap verspreidet. Et is verwant an et idee van nen [[meem]], al slöt den lätsten up ne vöäle gröätere gruup kulturele draegers dee van persoon töt persoon verspreided wordet. By internetmeems kümt et der meysttyds up dale dat et nen grap is den as up internet begünnen is binnen ne kleine gruup online lüde verbünden döär ne deylde interesse. Dårdöär sint de grappen van internetmeems vöär butenstånders lastig te bevatten.
 
-De meyste meems verskynet as weaderkeyrige plaatjes med nen tekst der up. Vake sint se [[irony|ironisk]] of [[sarkasme|sarkastisk]] bedoold. Ouk citaten uut [[film (cinematografie)|film]]s, [[book|böke]] en andere kultuurdraegers künnet meems worden.
+De meyste meems verskynet as weaderkeyrige plaatjes med nen tekst der up. Vake sint se [[irony|ironisk]] of [[sarkasme|sarkastisk]] bedoold. Disse künnet uut et nys kummen, mär ouk citaten uut [[film (cinematografie)|film]]s, [[book|böke]] en andere kultuurdraegers künnet meems worden.
 
 == Kenmarken van ne internetmeme ==
-Meems volget gin vast, vöäraf bepåld formaat. Foto's van echte lüde en deers, med name [[stockfoto]]'s, leynet sik good vöär meems döär der nen tekst oaverhen te leggen. En vöärbeald is de [[Overly Attached Girlfriend]] of [[Hide-the-Pain Harold]]. Ouk [[Rage Comic]]s sint ne subklasse van meems, wårin as ne ryge menskelike gevölens wordet uutebealded med nen satirisken clue. 
+Et vöärnaamste kenmark van internetmeems is dat se online deyld wordet. Meems volget gin vast, vöäraf bepåld formaat. Foto's van echte lüde en deers, med name [[stockfoto]]'s, leynet sik good vöär meems döär der nen tekst oaverhen te leggen. En vöärbeald is de [[Overly Attached Girlfriend]] of [[Hide-the-Pain Harold]]. Ouk [[Rage Comic]]s sint ne subklasse van meems, wårin as ne ryge menskelike gevölens wordet uutebealded med nen satirisken clue. 
 
 Oavereynstemming oaver wat ne meme inhöldt wördt voordan uperekked. Et vöärnaamste is herhaling en kleine anpassingen in de grap, soudat de verwysing når de oarsprungelike meem oavereande blivt mär nu relevant is vöär ne lecht afwykende situaty.
 
