--- a/Nedersaksisch.mw
+++ b/Nedersaksisch.mw
@@ -51,6 +51,8 @@ Wat de sprekers zelf angeet, hebben de Nedersaksische sprekers in Nederlaand der
 ===Taalgrens===
 De heufdverdeling van et Nedersaksisch löp zo as ezeegd 'niet' langes et geschei van [[Nederlaand]] en [[Duutslaand]]. Integendeel: vake heurt een Nedersaksisch dialekt uut Nederlaand bie een groter Duuts gebied. Zo is et grootste gedeelte van et Nedersaksisch een onderdeel et [[Westfaals|Westfaols]] en heurt et [[Grunnegs|Gronings]] bie et Noord-Nedersaksisch, veural bie et [[Oostfreisk Nederduutsk|Oostfrisch]]. Toch is et idee van de rieksgrens as taalgrens nog niet zo'n slicht idee: veural in de woordeschat bin der veule overeenkomsten tussen de dialekten an de Nederlaandse kaante, dit kömp deurdat - zo as hierboven al beschreven steet - der deur de eeuwen hinne, in Nederlaand naor et Nederlaands ekeken is veur nieje woorden en in Duutslaand naor et Duuts, deur disse ontwikkeling bin de dialekten soms iezelig vere uut mekaar egreuid. Et Gronings is een kleine uutzundering, veule Groningse woorden koemen oek in et [[Oostfreisk Nederduutsk|Oostfrisch]] veur.
 
+Uut onderzeuk blik det de verstaonbaorheid van Duuts Nedersaksisch en Nederlaands Nedersaksisch niet perse slechter wördt en det de baosis etzelfde blif, terwiel beiden richting et Standaardnederlaands en Hoogduuts hen greuit.<ref>Gooskens, C. S. & Kürschner, S. 2009 Low Saxon dialects across borders — Niedersächsische Dialecte über Grenzen hinweg. Lenz, A. N., Charlotte, G. & Siemon, R. (eds.). Franz Steiner Verlag, p. 273 - 297 (Beihefte Zeitschrift für Dialektologie und Linguistik; no. 138)</ref>
+
 ==Sprekersantallen==
 ===Nederlaand===
 Et antal sprekers van et Nedersaksisch (in [[Nederlaand]]) is volgens een telling uut [[2003]] (bron: ''taaltelling Nedersaksisch'' van [[Henk Bloemhoff]]) zo'n 1.616.000. Daor zatten de 150.000 sprekers uut de rest van [[Nederlaand]] (veural de [[Raandstad (gebeed)|Raandstad]]) en et butenlaand al bie in ([[Kannede|Kanada]], [[Australi'je (land)|Australië]], [[Verienigde Staoten van Amerika|Amerika]], [[Niej-Zeelaand]]). De 1.466.000 sprekers die in et Nedersaksische taalgebied woenen, vormen 9,1% van de Nederlaandse bevolking en woenen in verschillende regio's; dit ku'j hieronder in de tabel oek aoflezen. Je mutten niet vergeten dat et veur een groot part um ouwere meensen geet en dat et sprekersantal daorumme oek rap umlege geet. Et antal tweede- of dardetaalsprekers nimp de aof-eleupen tied wel wat toe. Oek is der de leste tied meer andacht veur et opniej anleren van et Nedersaksisch bie de kienders. Dit mut veurkoemen dat et antal niet nog veerder zakt. Eerder as 2003 is der nog nooit een telling ewest veur et hele Nedersaksische taalgebied.<ref>Handboek Nedersaksische taal- en letterkunde</ref>
