--- a/20_juni.mw
+++ b/20_juni.mw
@@ -10,7 +10,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''20 juni'''
 * [[1989]] - Opening van 't [[Huus van de Toekomst]].
 
 == Geboren ==
-* ...
+* [[1967]] - [[Nicole Kidman]].
 
 == Uut de tied ==
 * ...
