--- a/14_juni.mw
+++ b/14_juni.mw
@@ -8,7 +8,7 @@ De volgende gebeurtenissen vongden of vingden plaots op '''14 juni'''
 * [[1999]] - In [[Zuud-Afrika|Zuud-Aofrika]] volgt [[Thabo Mbeki]] [[Nelson Mandela]] op as prissedent.
 
 == Geboren ==
-* ...
+* [[1946]] - [[Donald Trump]].
 
 == Uut de tied ==
 * ...
