/* Geboren */ Griffith, 1926; Freeman, 1937; Hartman Black, 1956; Donovan, 1968.

--- a/1_juni.mw
+++ b/1_juni.mw
@@ -15,8 +15,13 @@ De volgende gebeurtenissen vunnen of vienen plak op '''1 juni'''.
 * [[1796]] - [[Sadi Carnot]], [[Fraankriek|Fraanse]] [[wiskunde]]geleerde.
 * [[1804]] - [[Michail Glinka]], [[Ruslaand|Russisch]] komponist.
 * [[1892]] - Keuning [[Amanoellah van Afganistan]].
-* [[1926]] - [[Marilyn Monroe]] (Norma Jean Baker), [[Verienigde Staoten van Amerika|Amerikaans]] aktrice.
+* [[1926]] 
+** [[Andy Griffith]]
+** [[Marilyn Monroe]] (Norma Jean Baker), [[Verienigde Staoten van Amerika|Amerikaans]] aktrice.
 * [[1934]] - [[Pat Boone]], Amerikaans popzanger.
+* [[1937]] - [[Morgan Freeman]]
+* [[1956]] - [[Lisa Hartman Black]]
+* [[1968]] - [[Jason Donovan]]
 * [[1973]] - [[Heidi Klum]], [[Duutslaand|Duuts]] fotomedel.
 * [[1974]] - [[Alanis Morisette]], [[Kannede]]es zangeres.
 * [[1982]] - [[Justine Hénin-Hardenne]], [[België|Belgische]] [[tennis]]ster.
