/* Geboren */ Harris, 1964; Dogg/Minogue, 1971.

--- a/20_oktober.mw
+++ b/20_oktober.mw
@@ -5,7 +5,11 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''20 oktober'''
 * ...
 
 == Geboren ==
-*[[1987]] - [[Sanne Nijhof]], model oet n Ham in Tweante
+* [[1964]] - [[Kamala Harris]]
+* [[1971]]
+** [[Snoop Dogg]] (Calvin C. Broadus]]
+** [[Dannii Minogue]]
+* [[1987]] - [[Sanne Nijhof]], model oet n Ham in Tweante
 
 == Uut de tied ==
 * ...
