--- a/20_oktober.mw
+++ b/20_oktober.mw
@@ -7,7 +7,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''20 oktober'''
 == Geboren ==
 * [[1964]] - [[Kamala Harris]]
 * [[1971]]
-** [[Snoop Dogg]] (Calvin C. Broadus]]
+** [[Snoop Dogg]] (Calvin C. Broadus)
 ** [[Dannii Minogue]]
 * [[1987]] - [[Sanne Nijhof]], model oet n Ham in Tweante
 
