--- a/20_november.mw
+++ b/20_november.mw
@@ -5,7 +5,7 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''20 november'''
 * ...
 
 == Geboren ==
-* ...
+* [[1942]] - [[Joe Biden]].
 
 == Uut de tied ==
 * ...
