/* Geboren */ Navratilova, 1956; Tucker, 1958; Newsom, 1967.

--- a/10_oktober.mw
+++ b/10_oktober.mw
@@ -5,7 +5,9 @@ De volgende gebeurtenissen vunnen of vienen plaose op '''10 oktober'''
 * ...
 
 == Geboren ==
-* ...
+* [[1956]] - [[Marina Navratilova]].
+* [[1958]] - [[Tanya Tucker]].
+* [[1967]] - [[Gavin Newsom]].
 
 == Uut de tied ==
 * ...
