--- a/Jorien_ter_Mors.mw
+++ b/Jorien_ter_Mors.mw
@@ -1,6 +1,6 @@
 [[Afbeelding:Jorien_ter_Mors.jpg|thumb|right|200px|Jorien ter Mors an et skaatsen an in 2020]]
 
-'''Jorien ter Mors''' ([[Eanske]], den [[21 december|21. december]] [[1989]]) is ne neaderlandske skaatsenrydster en old-shorttrackster. By de Olympiske Winterspöllen van [[2014]] in et [[Ruslaand|russiske]] [[Sotsji]] wün Ter Mors ne goldene plakke up beide de 1500 meter en de plogenachtervolging in et langebaanrennen. By de Olympiske winterspöllen van [[2018]] in et [[Zuud-Korea|Süüdkoreaanske]] [[Pyeongchang]] wün see ne goldene plakke up de 1000 meter in et langebaanrennen. In et [[shorttrack]]en wün see med plooggenoutes Yara van Kerkhof, Lara van Ruijven en Suzanne Schulting ne brunsene plakke en västigden see en ny wearldrekord. Döärdat de plogen van [[China]] en [[Kanada]] in de A-finale ne faute makeden, sköäven Ter Mors en öär koppel up når de darde steade.
+'''Jorien ter Mors''' ([[Eanske]], den [[21 december|21. december]] [[1989]]) is ne neaderlandske [[scheuvellopen|skaatsenrydster]] en old-shorttrackster. By de Olympiske Winterspöllen van [[2014]] in et [[Ruslaand|russiske]] [[Sotsji]] wün Ter Mors ne goldene plakke up beide de 1500 meter en de plogenachtervolging in et langebaanrennen. By de Olympiske winterspöllen van [[2018]] in et [[Zuud-Korea|Süüdkoreaanske]] [[Pyeongchang]] wün see ne goldene plakke up de 1000 meter in et langebaanrennen. In et [[shorttrack]]en wün see med plooggenoutes Yara van Kerkhof, Lara van Ruijven en Suzanne Schulting ne brunsene plakke en västigden see en ny wearldrekord. Döärdat de plogen van [[China]] en [[Kanada]] in de A-finale ne faute makeden, sköäven Ter Mors en öär koppel up når de darde steade.
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Sporter oet Oaveriessel]]
