--- a/Heimdall.mw
+++ b/Heimdall.mw
@@ -2,7 +2,7 @@
 
 '''Heimdall''' of '''heimdallr''' (ouk bekend as '''Rig''', '''Hallinskiði''', '''Gullintanni''' en '''Vindlér''' of '''Vindhlér''') is in de [[germaanse mythologie|germaanske mythology]] den wachtersgod. Vanuut synen burcht [[Himinbjörg]], wår de brandende reagenboagbrügge [[Bifröst]] samenkümt med de lucht, kikt hee uut vöär anvallers van et godenryk.
 
-Den [[ieslaand|yslandsken]] skryver [[Snorri Sturluson]] meynden dat Heimdall ne söäne is van [[Wodan]] en neagen maagdelike dochters van [[Aegir]], den sey-god. Heimdall is untstån uut den bruus van de sey-branding. Hee hevt vöärkennis en skarp sicht en gehöyr. Dårümme hoovt hee ouk neet voordan up wacht te stån, hee weat ja toch al wat der kümt. Hee drägt de klinkende hoorn Gjallarhorn üm alarm te blåsen as der gevår is en ridt up ''Gulltoppr'', en paerd med guldene manen. In syn huus hevt hee nen vöärråd [[meade]]. Hee hevt de sociale klassen van þrall (knecht), karl (buur) en jarl (graaf) under de mensken emaked.
+Den [[ieslaand|yslandsken]] skryver [[Snorri Sturluson]] meynden dat Heimdall ne söäne is van [[Wodan]] en neagen maagdelike dochters van [[Aegir]], den sey-god. Heimdall is untstån uut den bruus van de sey-branding. Hee hevt vöärkennis en skarp sicht en gehöyr. Dårümme hoovt hee ouk neet voordan up wacht te stån, hee weat ja toch al wat der kümt. Hee drägt de klinkende hoorn Gjallarhorn üm alarm te pusten as der gevår is en ridt up ''Gulltoppr'', en paerd med guldene manen. In syn huus hevt hee nen vöärråd [[meade]]. Hee hevt de sociale klassen van þrall (knecht), karl (buur) en jarl (graaf) under de mensken emaked.
 
 Eyn nömenswaerdig verhaal van Heimdall is syne poging üm [[Freya]]'s geleevde halskeatene [[Brísingamen]] terüg te krygen, terwyl as hee, in de verskyning van nen seyhund, vecht med [[Loki]], den stoakebaas. De teagenstelde verholding med Loki is belangryk, ümdat de vöärspelling is dat see mekander ümmebrenget tydens [[Ragnarök]]. 
 
