Wysigingen döär [[Special:Contributions/Zimlpy|Zimlpy]] ([[User talk:Zimlpy|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:NaegelBot|NaegelBot]]

--- a/Grönnens_Laid.mw
+++ b/Grönnens_Laid.mw
@@ -1,32 +1,37 @@
-t '''Grönnens laid''' is t volkslaid van de [[Grunnen (provìnzie)|provìnzie Grönnen]]. t Wuir schreven deur [[Geert Teis Pzn.]] uut [[Knoal (dörp)|Knoal]]. t Verscheen as eerst ien t Moanblad <nowiki>''Groningen''</nowiki> ien t veurjoar van 1919. As t volkslaid zongen wordt, heurt elkenain op te stoan. Blieven zitten tiedens t zingen van t Grönnens laid wordt zain as hail onbeleefd.
+t '''Grönnens Laid''' is t volkslaid van de [[Grunnen (provìnzie)|provìnzie Grönnen]]. t Wuir schreven deur [[Geert Teis Pzn.]] uut [[Knoal (dörp)|Knoal]]. t Verscheen as eerst ien t Moanblad <nowiki>''Groningen''</nowiki> ien t veurjoar van 1919. As t volkslaid zongen wordt, heurt elkenain op te stoan. Blieven zitten tiedens t zingen van t Grönnens laid wordt zain as hail onbeleefd.
 
 [[Image:Speaker Icon.svg|18px]] [[Media:Nl Grönnens Laid.ogg|Beluuster]]
 
 <poem style="margin:0; margin-left:4em; margin-top:10px; margin-right:10px; border: 1px solid #dfdfdf; padding: 0 1em 1em 1em; background-color:#F8F8F2; align:right;">
-'''Grönnens laid.'''<ref>''Maandblad „Groningen“. Tweede jaargang 1919/1920.'' Groningen, ''Inhoud'' & S. 25</ref>
+Van Lauwerzee tot Dollard tou, 
+van Drenthe tot aan t Wad,
+Doar gruit, doar bluit ain wonderlaand. 
+Rondom ain wondre stad.
 
-Van Lauwerzee tot Dollard tou
-Van Drente tot aan 't Wad,
-Daor gruit, daor bluit 'n wonderlaand,
-Rondom ain wondre stad: *)
-Ain Pronkjewail in gaolden raand
-Is Grönnen: Stad en Ommelaand.
+Ain Pronkjewail in golden raand 
+is Grönnen, Stad en Ommelaand;
+Ain Pronkjewail in golden raand 
+is Stad en Ommelaand!
 
-Daor broest de zee, daor hoelt de wind
-Daor soest 't aan diek en wad,
-Maor rusteg waarkt en wuilt het volk
-Het volk van loug en stad.
-Ain Pronkjewail in gaolden raand
-Is Grönnen: Stad en Ommelaand.
+Doar broest de zee, doar hoelt de wind, 
+doar soest 't aan diek en wad,
+Mor rusteg waarkt en wuilt het volk, 
+het volk van Loug en Stad.
 
-Daor woont de dege degelkhaaid
-De wille, vast as staol,
-Daor vuilt het haart, wat tonge sprekt
-In richt- en slichte taol.
-Ain Pronkjewail in gaolden raand
-Is Grönnen: Stad en Ommelaand.
+Ain Pronkjewail in golden raand 
+is Grönnen, Stad en Ommelaand;
+Ain Pronkjewail in golden raand 
+is Stad en Ommelaand!
 
-: *) Wordt gezongen: Rondom, rondom, ain wondre stad. Zo ook in de andere strofen.
+Doar woont de dege degelkhaid, 
+de wille, vast as stoal
+Doar vuilt het haart, wat tonge sprekt, 
+in richt- en slichte toal.
+
+Ain Pronkjewail in golden raand 
+is Grönnen, Stad en Ommelaand;
+Ain Pronkjewail in golden raand 
+is Stad en Ommelaand!
 </poem>
 
 {{DEFAULTSORT:Gronnens Laid}}
