--- a/Veluws.mw
+++ b/Veluws.mw
@@ -33,7 +33,7 @@ t Veluws is ondanks dat t n echt Nedersaksies dialekt is, n soort overgangsdiale
 t Veluws kan weer onderverdeeld wörden in twee groepen, namelik t [[West-Veluws]] (deur de taalkundige Jo Daan ''Veluws'' eneumd) en t [[Oost-Veluws]] (deur Jo Daan in-edeeld bie t [[Gelders-Oaveriessels|Gelders-Overiessels]]), veerder hef zwat elk darp en elke stad zien eigen dialekt, vake is der oek nog es n dialektverschil binnen n darp, stad of [[buurtschop|buurtschap]]. Partie taalkundigen onderscheien oek nog t Zuud-Veluws (dat uut [[Utrechts-Alblasserweerds]]e en [[Zuud-Gelders]]e dialekten besteet), disse darde subdialektgroep völt dus niet onder t Nedersaksies, en is oek gien gebrukelike indeling.
 
 ==Friso-, Franko- en zuver Saksies<ref>http://www.dbnl.org/tekst/wink007alge01_01/wink007alge01_01_0092.htm</ref>==
-De dialekten uut t noordelike deel van de Veluwe vallen onder t [[Friso-Saksische toalen|Friso-Saksies]]. Dit gebied löp langes de [[Zujerzee]]. t Verbient de stejen [[Elburg]] en [[Harderwiek]] mit de darpen [[Oosterwolde (Gelderlaond)|Oosterwolde]], [[Oldebroek]], [[Doorspiek]], [[Nunspeet]], [[Elspeet]], [[Leuvenum]], [[Hierden]] en [[Armelo]]. t Is niet allinnig de taal van disse laandstreek die dudelike sporen van de [[Westlaauwers Frais|Friese]] taal nao-eleuten hef, mer oek veule aandere biezunderheen in levenswieze en gebruken. Veural in t ouwe grei, zo laoten onder aandere de ooriezers van de boerinnen dudelik zien dat de bevolking van disse laandstreek oorspronkelik bie n Friese stamme heurden en heel vrogger oek Fries praotten. t [[Nedersaksies]] hef oek hier, net as in de aandere laandstreken die van oorsprong Fries waren, de Friese taal verdröngen.
+De dialekten uut t noordelike deel van de Veluwe vallen onder t [[Friso-Saksische toalen|Friso-Saksies]] volgens Johan Winkler. Dit gebied löp langes de [[Zujerzee]]. t Verbient de stejen [[Elburg]] en [[Harderwiek]] mit de darpen [[Oosterwolde (Gelderlaond)|Oosterwolde]], [[Oldebroek]], [[Doorspiek]], [[Nunspeet]], [[Elspeet]], [[Leuvenum]], [[Hierden]] en [[Armelo]]. t Is niet allinnig de taal van disse laandstreek die dudelike sporen van de [[Westlaauwers Frais|Friese]] taal nao-eleuten hef, mer oek veule aandere biezunderheen in levenswieze en gebruken. Veural in t ouwe grei, zo laoten onder aandere de ooriezers van de boerinnen dudelik zien dat de bevolking van disse laandstreek oorspronkelik bie n Friese stamme heurden en heel vrogger oek Fries praotten. t [[Nedersaksies]] hef oek hier, net as in de aandere laandstreken die van oorsprong Fries waren, de Friese taal verdröngen.
 
 De Friso-Saksiese tongval van disse streek kömp t meest overene mit de tongval van de stejen [[Zwolle]] en [[Kampen (Overiessel)|Kampen]] en umstreken.
 
