*Empty MediaWiki Message*

--- a/Veluws.mw
+++ b/Veluws.mw
@@ -7,7 +7,7 @@
 | naam_anders = Plat
 | laand       = [[Nederlaand]]   
 | gebeed      = t Midden en westen van de provinsie Gelderland, op de Veluwe (mer niet in de gemeenten [[Arnem]], [[Renkum]], [[Rozendaal]] en [[Wageningen]], en deels niet in [[Ee (gemeente)|Ede]] en [[Rheden]]), in de [[Utrecht (provinsie)|Utrechtse]] gemeente [[Bunsjoten|Bunschoten]] en n deel van de Utrechtse gemeenten [[Amersfoort]] en [[Leusden]]
-| sprekkers   = 172.000 (volgens ''Taaltelling Nedersaksisch'')
+| sprekkers   = 172.000 (volgens ''Taaltelling Nedersaksisch'')<ref>Niet et hele Veluwse gebied. Zie Taaltelling Nedersaksische veur de kaarte van et onderzöchte gebied.</ref>
 | dialekte    = [[West-Veluws]] en [[Oost-Veluws]], veerder nog weer onder te verdelen in darps- of stadsdialekten
 | klassifikatie = 
 *[[Indo-Europees]]  
