*Empty MediaWiki Message*

--- a/Raolte.mw
+++ b/Raolte.mw
@@ -18,9 +18,9 @@
 | postcode = 8055, 8100-8119, 8140-8144
 | webstee = [http://www.raalte.nl www.raalte.nl]
 }}
-'''Raolte''' is n [[gemiente (bestuur)|gemeente]] en plaatse in de [[pervincie|provinsie]] [[Oaveriessel]] in t sentrum van [[Sallaand]]. De gemeente had op [[31 december|1 jannewaori]] [[2020]] 37.709 inwoners (bron: CBS) en hef n oppervlakte van 172,54 [[vierkaante kilemeter|km²]] (waorvan 0,41&nbsp;km² water).
+'''Raolte''' is n [[gemiente (bestuur)|gemeente]] en plaatse in de [[pervincie|provinsie]] [[Oaveriessel]] in t centrum van [[Sallaand]]. De gemeente had op [[31 december|1 jannewaori]] [[2020]] 37.709 inwoners (bron: CBS) en hef n oppervlakte van 172,54 [[vierkaante kilemeter|km²]] (waorvan 0,41&nbsp;km² water).
 
-In de leste waeke van [[augustus]] vieren ze in Raolte t oogstdankfeest [[Stöppelhaene]].
+In de leste waeke van [[augustus]] viert ze in Raolte t oogstdankfeest [[Stöppelhaene]].
 
 ==Overige kernen==
 De gemeente besteet uut de volgende kernen:
