--- a/Mael.mw
+++ b/Mael.mw
@@ -34,7 +34,7 @@ Harde tarwe (tarwebloom van [[Durum (tarwe)|durum]]) hef meer [[gluten]] as et g
 *[[Grunnegs]]: ''meel''
 *[[Sallaands]]: ''määl'', ''mael'', ''maal'' (Deamter e.o)
 *[[Stellingwarfs]]: ''mael'', ''meel''
-*[[Tweants]]: ''mel''
+*[[Tweants]]: ''mel'', ''mjäl'' (Vreezenvenne)
 
 ==Uutgoande verwiezing==
 *[http://www.classofoods.com/pagina1_1.html Tarwebloom en roggemael]
