*Empty MediaWiki Message*

--- a/Zwollerkärspel.mw
+++ b/Zwollerkärspel.mw
@@ -17,7 +17,7 @@ netnummer = |
 postcode = |
 webstee = |
 }}
-[[ofbeelding:Overzicht voorgevel met toren en rechter zijgevel met serre, villa - Zwolle - 20350457 - RCE.jpg|miniatuur|[[Gemientehuus]] van Zwollerkärspel (1916-1967) in [[Ter Pelkwijkpark]], in Hollandse neo-renaissancestijl]]
+[[ofbeelding:Overzicht voorgevel met toren en rechter zijgevel met serre, villa - Zwolle - 20350457 - RCE.jpg|miniatuur|[[Gemientehuus]] van Zwollerkärspel (1916-1967) in [[Ter Pelkwijkpark]], in Hollaandse neo-renaissancestijl]]
 [[ofbeelding:Raadhuis Zwollerkerspel.jpg|miniatuur|Et gemientehuus was een [[herenhuus]] ontwörpen deur S.J.H Troost en in 1884 was et bouwen van et herenhuus klaor<ref>https://rijksmonumenten.nl/monument/509844/herenhuis-in-hollandse-neo-renaissancestijl-1916-1967-gemeentehuis-van-zwollerkerspel/zwolle/</ref>|alt=]]
 '''Zwollerkärspel''' was een gemiente die van [[1802]] töt [[1 augustus]] [[1967]] bestaon hef. De gemiente is hiernao opegaon in de toen bestaonde gemientes [[Heino (Roalte)|Heino]] (noe [[Raolte]]), [[Zwolle]], [[Iesselmuden]] (noe [[Kampen (Overiessel)|Kampen]]) en [[Asselt]] en [[Genemuden]] (noe [[Zwärtewäterlaand|Zwärtewäterlaand]]). De näme ''[[Kärspel]]'' kump van et feit dät et gebied bi'j een [[Kaark (gebouw)|kärk]] heurden. De näme ''Zwolle'' kump weg van et feit dät de gemiente rondumme de stad Zwolle hen lag. De gemiente had in 1967 14.615 inwoners op een oppervlakte van 147,5 [[Vierkaante kilemeter|veerkaante kilometer]]. In [[1813]] had de gemiente nog 3500 inwoners. De gemiente had toen nog niet zien hudige vörm.<ref>https://www.archieven.nl/nl/zoeken?mivast=0&mizig=210&miadt=141&miaet=1&micode=0801&minr=10636340&miview=inv2</ref>
 
