*Empty MediaWiki Message*

--- a/Hanzeland.mw
+++ b/Hanzeland.mw
@@ -34,8 +34,8 @@ In Hanzeland kun ie ook het [[Lübeckplein]] vinden, waoronder een parkeergarage
 
 == Galleri'je ==
 <gallery widths="400" heights="400">
-ofbeelding:Zwolle_Hanzeland.JPG|thumb|Koggelaan met op het ende het stadskantoor met daorop een kunstwärk
-ofbeelding:Zwolle skyline.jpg|thumb|Uutkiek op kantoren in Hanzeland
+Bestaand:Zwolle Hanzeland.JPG|Koggelaan met op et ende et stadskantoor met daorop een kunstwärk
+Bestaand:Zwolle skyline.jpg|Zicht up kantoren in Hanzeland
 </gallery>
 
 {{Dialekt|sdz}}
